# picolibc-m65832

./: .gitignore  build_and_test.sh  meson.build  meson_options.txt  picolibc.ld.in  run_picolibc_gtest.py
libc/include/machine/: ieeefp.h  setjmp.h
libc/machine/arm/sys/: meson.build
libc/machine/m65832/: m65832_iob.c  meson.build  setjmp.S  setjmp.c  syscalls.c
libc/stdio/: snprintf.c  sprintf.c  vsnprintf.c  vsprintf.c
libm/test/: math.c
libos/linux/: _exit.c  _syscall_error.c  close.c  lseek.c  make-errno  meson.build  open.c  read.c  unlink.c  write.c
libos/linux/machine/aarch64/sys/: syscall.h
libos/linux/machine/arm/sys/: syscall.h
libos/linux/machine/x86/: _syscall_error.c  linux_set_tls.c  meson.build
libos/linux/machine/x86/asm/: ldt.h
libos/linux/machine/x86/sys/: linux-errno.h  linux-syscall.h
newlib/libc/machine/m65832/: m65832_iob.c  meson.build  setjmp.c
picocrt/: meson.build
picocrt/machine/x86/: crt0-64-linux.S  meson.build
scripts/: cross-x86_64-linux-gnu.txt  do-x86_64-linux-gnu-configure
semihost/: meson.build
test/: meson.build  tls.c
test/test-math/: meson.build
